--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "dayjs": "^1.11.13",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
