--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dayjs": "^1.11.13",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "eslint": "^8",
