--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
-version: "3.8"
+version: '3.8'
+
 services:
-  web:
+  nextjs:
     build: .
+    container_name: nextjs-app
     ports:
-      - "3500:3500"
-    environment:
-      - NODE_ENV=production
+      - "3000:3000"  # Expone el puerto 3000 para acceder al frontend
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
